Update Index and Resources

--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
-
+<link href="style.css" type="text/css" rel="stylesheet">
 <html>
-
-<head>
-
-<title></title>
-</head>
+  <head>
+    <title>Excursion</title>
+  </head>
 
 <body>
-
+  <h1>Discover hidden places in the world around you</h1>
+    <br>
+  <a href="./index.html">Download Excursion (Coming soon!)</a>
+    <br>
+  <video src="resources/excursion.mp4">Video Not Supported</video>
+    <br>
+  <h1>Your personal travel guide</h1>
+    <br>
+    <p> Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <img src="resources/camp.jpg"><br>
+    <img src="resources/phone.png"><br>
+    <a href="./index.html">Download Excursion (Coming soon!)</a>
+    <p><div align="right">© Excursion</div></p>
 </body>
+
 </html>
