--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<link href="style.css" type="text/css" rel="stylesheet">
+<link href="resources/css/style.css" type="text/css" rel="stylesheet">
 <html>
   <head>
     <title>Excursion</title>
@@ -10,13 +10,13 @@
     <br>
   <a href="./index.html">Download Excursion (Coming soon!)</a>
     <br>
-  <video src="resources/excursion.mp4">Video Not Supported</video>
+  <video autoplay src="resources/videos/excursion.mp4">Video Not Supported</video>
     <br>
   <h1>Your personal travel guide</h1>
     <br>
     <p> Excursion remembers places you like, and recommends new points of interest around you.</p>
-    <img src="resources/camp.jpg"><br>
-    <img src="resources/phone.png"><br>
+    <img src="resources/images/camp.jpg"><br>
+    <img src="resources/images/phone.png"><br>
     <a href="./index.html">Download Excursion (Coming soon!)</a>
     <p><div align="right">© Excursion</div></p>
 </body>
